# Eva-CLI

./: .dockerignore  .firebaserc  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  database.rules.json  firebase.json  firestore.rules  storage.rules
.github/workflows/: ci.yml  pages.yml  release.yml
config/: README.md  eva.yaml
config/adapters/: README.md  claude-api.yaml  code-review-skill.yaml  codex-cli.yaml  github-mcp.yaml
config/agents/: README.md
config/capabilities/: README.md  config-lint-skill.yaml  config-lint.lua  project-summary-mcp.yaml  repo-summary.yaml
config/policies/: README.md  adapter.yaml  hardware.yaml  mcp.yaml  memory.yaml  sandbox.yaml
config/routes/: README.md  topics.yaml
config/schemas/: README.md  adapter.schema.json  agent.schema.json  capability.schema.json  eva.schema.json  policy.schema.json  routes.schema.json
contracts/cli-json/: capability-list.json  hardware-bind.json  mcp-compatibility-measure.json  release-check-production-missing-evidence.json  release-check.json  restore-plan.json  run-basic.json  service-00-status.json  service-01-no-dev.json  service-10-install.json  service-11-install-idempotent.json  version.json  (+9 more)
crates/: README.md
crates/eva-adapter/: Cargo.toml  README.md
crates/eva-adapter/src/: README.md  capability_host.rs  credential_vault.rs  error.rs  lib.rs  manifest.rs  process_backend.rs  registry.rs  restart.rs  router.rs  runtime.rs  stream.rs  supervisor.rs
crates/eva-adapter/src/transports/: README.md  builtin.rs  eventbus.rs  hardware.rs  http.rs  lua_capability.rs  mcp.rs  mod.rs  skill.rs  stdio.rs
crates/eva-agent/: Cargo.toml  README.md
crates/eva-agent/src/: README.md  lib.rs  lifecycle.rs  queue.rs  runtime.rs  state.rs
crates/eva-cli/: Cargo.toml  README.md
crates/eva-cli/src/: README.md  adapter.rs  agent.rs  capability.rs  doctor.rs  emit.rs  inspect.rs  lib.rs  run.rs
crates/eva-cli/src/run/: adapter_cmd.rs  agent_cmd.rs  backup_cmd.rs  capability_cmd.rs  config_cmd.rs  daemon_cmd.rs  discovery_cmd.rs  doctor_cmd.rs  emit_cmd.rs  hardware_cmd.rs  inspect_cmd.rs  mcp_cmd.rs  memory_cmd.rs  observability_cmd.rs  release_cmd.rs  restore_cmd.rs  run_cmd.rs  service_cmd.rs  skill_cmd.rs  snapshot_cmd.rs  task_cmd.rs  upgrade_cmd.rs  version_cmd.rs
crates/eva-core/: Cargo.toml  README.md
crates/eva-core/src/: README.md  capability.rs  digest.rs  error.rs  event.rs  ids.rs  invoke.rs  lib.rs  topic.rs
crates/eva-hardware/: Cargo.toml  README.md
crates/eva-hardware/src/: README.md  discovery.rs  driver.rs  hotplug.rs  lib.rs  lifecycle.rs  registry.rs  state.rs
crates/eva-lifecycle/: Cargo.toml  README.md
crates/eva-lifecycle/src/: README.md  apply_lock.rs  drain.rs  generation.rs  handoff.rs  launchd.rs  lib.rs  rollback.rs  service_command.rs  service_entry.rs  service_factory.rs  service_manager.rs  supervisor.rs  systemd.rs  windows_service.rs
crates/eva-lua-host/: Cargo.toml  README.md
crates/eva-lua-host/src/: README.md  bindings.rs  hot_reload.rs  lib.rs  loader.rs  sandbox.rs  vm.rs
crates/eva-mcp/: Cargo.toml  README.md
crates/eva-mcp/src/: README.md  client.rs  compatibility.rs  http_transport.rs  json_rpc.rs  lib.rs  lifecycle.rs  policy.rs  schema.rs  server.rs  server_transport.rs  session.rs  sse.rs  streamable_http.rs  tool_mapping.rs
crates/eva-mcp/testdata/tls/: README.md  ca.pem  client.key  client.pem  expired.pem  server.key  server.pem  unknown-ca.pem  wrong.pem
crates/eva-observability/: Cargo.toml  README.md
crates/eva-observability/src/: README.md  audit.rs  backend.rs  lib.rs  lifecycle.rs  metrics.rs  opentelemetry_exporter.rs  retention.rs  trace.rs  tracing_bridge.rs
crates/eva-runtime/: Cargo.toml  README.md
crates/eva-runtime/src/: README.md  basic.rs  builder.rs  config_generation.rs  config_generation_store.rs  config_watcher.rs  daemon.rs  diagnostics.rs  lib.rs  memory_worker.rs  recovery.rs  runtime.rs  scheduler_retry.rs  services.rs  shutdown.rs  task.rs  task_worker.rs
doc/: Agent扫描与发现架构方案.md  Agent记忆与知识库架构方案.md  EvaLauncher-CLI总体架构方案.md  EvaLauncher-CLI进程级停机升级架构方案.md  EvaLauncher-CLI项目配置方案.md  Lua承载Skill-MCP-Tool热更新架构方案.md  Lua调用外部Agent动态Adapter架构方案.md  README.md  Rust与Lua事件总线智能体调度架构方案.md  rust-lua-eventbus-langgraph-feasibility.md  外接硬件接入与热插拔架构方案.md  总体架构方案.md  方案.txt  进程级停机升级架构方案.md  项目配置方案.md
docs/: Agent扫描与发现架构方案.md  Agent记忆与知识库架构方案.md  IDEA插件开发工具链功能方案.md  Lua承载Skill-MCP-Tool热更新架构方案.md  Lua调用外部Agent动态Adapter架构方案.md  README.md  Rust与Lua事件总线智能体调度架构方案.md  Topic路由混合同步方案.md  V0.1项目基线验收记录.md  V0.2契约与配置稳定验收记录.md  备份迁移包与ReleaseSnapshot架构方案.md  外接硬件接入与热插拔架构方案.md  官网讨论区聊天功能Firebase接入方案.md  当前项目从零到完整实现实施计划.md  总体架构方案.md  方案设计风险评审.md  模块划分方案.md  网站与文档多语言适配方案.md  进程级停机升级架构方案.md  项目配置方案.md
examples/: README.md
functions/: index.js  package-lock.json  package.json
scripts/: aggregate-release-platform-evidence.ps1  build-site-i18n.ps1  capture-release-evidence.ps1  prepare-release-evidence-upload.ps1  test-capture-release-evidence.ps1  test-mcp-compatibility-evidence.ps1  test-package-manager-metadata.ps1  test-release-evidence-readback.ps1  test-release-platform-evidence.ps1  test-runtime-process-evidence.ps1  validate-cli-json-contracts.ps1  validate-i18n.ps1  validate-mcp-compatibility-evidence.ps1  validate-package-manager-metadata.ps1  validate-runtime-process-evidence.ps1  validate-version-management.ps1  verify-release-evidence-readback.ps1  write-provider-admission-evidence.ps1  write-release-platform-evidence.ps1
src/: README.md  main.rs
tests/: background_runtime.rs
website/: README.md  firebase-messaging-sw.js  index.html  styles.css
wiki/: Adapters-and-Capabilities.md  Architecture-Overview.md  Backup,-Migration,-and-Release-Snapshot.md  Configuration-and-Localization.md  Contributor-Guide.md  Home.md  IDEA-Plugin-Toolchain.md  Memory,-Knowledge,-and-Discovery.md  README.md  Roadmap-and-Open-Risks.md  Runtime-and-Scheduling.md  Skill-Implementation.md  Zero-to-1.0-Roadmap.md  _Footer.md  _Sidebar.md
workspace/: github-pages-discussion-module-plan.md  static-blog-with-categories-plan.md
(+412 files in other folders)
