[package]
name = "eva-adapter"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
eva-capability = { path = "../eva-capability" }
eva-config = { path = "../eva-config" }
eva-core = { path = "../eva-core" }
eva-hardware = { path = "../eva-hardware" }
eva-mcp = { path = "../eva-mcp" }
eva-observability = { path = "../eva-observability" }
eva-policy = { path = "../eva-policy" }
eva-storage = { path = "../eva-storage" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_JobObjects",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }
