[package]
name = "eva-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
eva-adapter = { path = "../eva-adapter" }
eva-config = { path = "../eva-config" }
eva-core = { path = "../eva-core" }
eva-discovery = { path = "../eva-discovery" }
eva-mcp = { path = "../eva-mcp" }
eva-observability = { path = "../eva-observability" }
eva-runtime = { path = "../eva-runtime" }
