[package]
name = "eva-hardware"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
eva-config = { path = "../eva-config" }
eva-core = { path = "../eva-core" }
eva-eventbus = { path = "../eva-eventbus" }
eva-observability = { path = "../eva-observability" }
eva-policy = { path = "../eva-policy" }

[dev-dependencies]
serde_yaml = "0.9"
