[package]
name = "eva-lifecycle"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
eva-core = { path = "../eva-core" }
eva-config = { path = "../eva-config" }
eva-backup = { path = "../eva-backup" }
eva-observability = { path = "../eva-observability" }
eva-policy = { path = "../eva-policy" }
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_JobObjects",
  "Win32_System_Services",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }
