[package]
name = "eva-observability"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
eva-core = { path = "../eva-core" }
opentelemetry = { version = "0.32.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["http-proto", "metrics", "reqwest-blocking-client", "trace"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["metrics", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
