[package]
name = "eva-runtime"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
eva-adapter = { path = "../eva-adapter" }
eva-agent = { path = "../eva-agent" }
eva-backup = { path = "../eva-backup" }
eva-capability = { path = "../eva-capability" }
eva-config = { path = "../eva-config" }
eva-core = { path = "../eva-core" }
eva-discovery = { path = "../eva-discovery" }
eva-eventbus = { path = "../eva-eventbus" }
eva-hardware = { path = "../eva-hardware" }
eva-lifecycle = { path = "../eva-lifecycle" }
eva-lua-host = { path = "../eva-lua-host" }
eva-mcp = { path = "../eva-mcp" }
eva-memory = { path = "../eva-memory" }
eva-observability = { path = "../eva-observability" }
eva-policy = { path = "../eva-policy" }
eva-scheduler = { path = "../eva-scheduler" }
eva-storage = { path = "../eva-storage" }
